force-app/main/default/objects/Loan_Decision__c/Loan_Decision__c.object-meta.xml
<CustomObject>
    <label>Loan Decision</label>
    <nameField>
        <displayFormat>DEC-{00000}</displayFormat>
        <label>Decision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>