force-app/main/default/objects/Loan_Decision__c/fields/Approved_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Approved_Tenure__c</fullName>
    <label>Approved Tenure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>