force-app/main/default/objects/Loan_Decision__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>