force-app/main/default/objects/Loan_Decision__c/fields/Decision_Summary__c.field-meta.xml
<CustomField>
    <fullName>Decision_Summary__c</fullName>
    <label>Decision Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>