force-app/main/default/objects/Loan_Decision__c/fields/Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Generated_By__c</fullName>
    <label>Generated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>AI Agent</fullName>
        </value>
        <value>
            <fullName>Manual</fullName>
        </value>
        <value>
            <fullName>Hybrid</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>