force-app/main/default/objects/Loan_Decision__c/fields/Key_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Key_Reasons__c</fullName>
    <label>Key Reasons</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>