force-app/main/default/objects/Loan_Decision__c/fields/Missing_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Missing_Paperwork__c</fullName>
    <label>Missing Paperwork</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>