force-app/main/default/objects/Loan_Decision__c/fields/Officer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Officer_Comments__c</fullName>
    <label>Officer Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>