force-app/main/default/objects/Loan_Decision__c/fields/Officer_Decision__c.field-meta.xml
<CustomField>
    <fullName>Officer_Decision__c</fullName>
    <label>Officer Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Accept AI</fullName>
        </value>
        <value>
            <fullName>Override Approve</fullName>
        </value>
        <value>
            <fullName>Override Reject</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>