force-app/main/default/objects/Loan_Decision__c/fields/Officer_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Officer_Reviewed__c</fullName>
    <label>Officer Reviewed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>