force-app/main/default/objects/Loan_Decision__c/fields/Officer_Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Officer_Reviewed_At__c</fullName>
    <label>Officer Reviewed At</label>
    <type>DateTime</type>
</CustomField>