force-app/main/default/objects/Loan_Decision__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Approve</fullName>
        </value>
        <value>
            <fullName>Hold</fullName>
        </value>
        <value>
            <fullName>Reject</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>