force-app/main/default/objects/Loan_Decision__c/fields/Suggested_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Interest_Rate__c</fullName>
    <label>Suggested Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>